@@ -58,7 +58,7 @@ p.attachment {
 }
 
 img {
-	max-width: 100%;
+/*	max-width: 100%; */
 	padding: 0;
 	margin: 0;
 }
